[project]
name = "llm-hyperbolic"
version = "0.4.6"
description = "LLM access to Hyperbolic's API"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = ["llm", "httpx", "requests", "pillow"]
authors = [{ name = "Nick Mystic" }]
keywords = ["llm", "ai", "hyperbolic", "language model", "image generation"]

[project.urls]
Homepage = "https://github.com/ghostofpokemon/llm-hyperbolic"
Issues = "https://github.com/ghostofpokemon/llm-hyperbolic/issues"
CI = "https://github.com/ghostofpokemon/llm-hyperbolic/actions"

[project.entry-points.llm]
hyperbolic = "llm_hyperbolic"

[project.optional-dependencies]
test = ["pytest", "pytest-httpx"]
